--- a/index.html
+++ b/index.html
@@ -2,22 +2,55 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="https://www.lamborghini.com/ico/favicon-32x32.png">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/responsive.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="#">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>#</title>
+    <title>Automobili Lamborghini</title>
 </head>
 <body>
-    <nav>
+    <header class="primary-header bg-neutral-850">
+        <div class="nav-container">
+            <a href="#"><img src="https://www.lamborghini.com/sites/it-en/files/themes/custom/lambo_facelift_2019/images/logo.png" alt="Lamborghini Logo"></a>
+            <nav class="primary-navigation text-neutral-100">
+                <ul role="list" class="nav-list">
+                    <li><a href="#">Models</a></li>
+                    <li><a href="#">Custom Solutions</a></li>
+                    <li><a href="#">Ownership</a></li>
+                    <li><a href="#">Motorsport</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <main style="height: 400px;">
+        <section>
+            <div class="container">
 
-    </nav>
-    <main>
-
+            </div>
+        </section>
     </main>
-    <footer>
-
+    <footer class="bg-neutral-850 text-neutral-100">
+        <div class="container">
+            <div class="row">
+                <div>
+                    <nav class="secundairy-navigation">
+                        <ul role="list" class="nav-list">
+                            <li><a href="#">Company</a></li>
+                            <li><a href="#">Careers</a></li>
+                            <li><a href="#">Contact Us</a></li>
+                            <li><a href="#">Sustainability</a></li>
+                            <li><a href="#">Media Center</a></li>
+                            <li><a href="#">Privacy &amp; Legal</a></li>
+                            <li><a href="#">Cookie Settings</a></li>
+                            <li><a href="#">Sitemap</a></li>
+                            <li><a href="#">Newsletter</a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
