--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 </head>
 <body>
     <header class="primary-header bg-neutral-850">
-        <div class="nav-container">
+        <div class="nav-container flex align-items-center">
             <a href="#"><img src="https://www.lamborghini.com/sites/it-en/files/themes/custom/lambo_facelift_2019/images/logo.png" alt="Lamborghini Logo"></a>
             <nav class="primary-navigation text-neutral-100">
-                <ul role="list" class="nav-list">
+                <ul role="list" class="nav-list flex gap-small uppercase ">
                     <li><a href="#">Models</a></li>
                     <li><a href="#">Custom Solutions</a></li>
                     <li><a href="#">Ownership</a></li>
