--- a/index.html
+++ b/index.html
@@ -5,16 +5,19 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Automobili Lamborghini</title>
 </head>
 <body>
     <header class="primary-header bg-neutral-850">
-        <div class="nav-container flex align-items-center">
+        <div class="nav-container flex align-items-center | flex-col">
             <a href="#"><img src="https://www.lamborghini.com/sites/it-en/files/themes/custom/lambo_facelift_2019/images/logo.png" alt="Lamborghini Logo"></a>
+            <input type="checkbox" id="checkbox_toggle" />
+            <label for="checkbox_toggle" class="hamburger text-neutral-100">&#9776;</label>
             <nav class="primary-navigation text-neutral-100">
-                <ul role="list" class="nav-list flex gap-small uppercase ">
+                <ul role="list" class="nav-list flex gap-small uppercase | flex-col">
                     <li><a href="#">Models</a></li>
                     <li><a href="#">Custom Solutions</a></li>
                     <li><a href="#">Ownership</a></li>
