--- a/index.html
+++ b/index.html
@@ -1,57 +1,42 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="https://www.lamborghini.com/ico/favicon-32x32.png">
+    <link rel="icon" href="#">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Automobili Lamborghini</title>
+    <title>Dylan de Groot</title>
 </head>
 <body>
     <header class="primary-header bg-neutral-850">
+        <input type="checkbox" class="d-none" id="checkbox_toggle">
+        <label for="checkbox_toggle" class="hamburger absolute text-neutral-100">&#9776;</label>
         <div class="nav-container flex align-items-center | flex-col">
-            <a href="#"><img src="https://www.lamborghini.com/sites/it-en/files/themes/custom/lambo_facelift_2019/images/logo.png" alt="Lamborghini Logo"></a>
-            <input type="checkbox" id="checkbox_toggle" />
-            <label for="checkbox_toggle" class="hamburger text-neutral-100">&#9776;</label>
+            <a href="#"><img src="#" alt="Logo"></a>
             <nav class="primary-navigation text-neutral-100">
                 <ul role="list" class="nav-list flex gap-small uppercase | flex-col">
-                    <li><a href="#">Models</a></li>
-                    <li><a href="#">Custom Solutions</a></li>
-                    <li><a href="#">Ownership</a></li>
-                    <li><a href="#">Motorsport</a></li>
+                    <li><a href="#">Hobbies</a></li>
+                    <li><a href="#">Experiences</a></li>
+                    <li><a href="#">YoungOnes</a></li>
+                    <li><a href="#">Contact</a></li>
                 </ul>
             </nav>
         </div>
     </header>
     <main style="height: 400px;">
         <section>
-            <div class="container">
-
+            <div class="container grid grid-col-2">
+                <div>content</div>
+                <div>content</div>
             </div>
         </section>
     </main>
     <footer class="bg-neutral-850 text-neutral-100">
         <div class="container">
-            <div class="row">
-                <div>
-                    <nav class="secundairy-navigation">
-                        <ul role="list" class="nav-list">
-                            <li><a href="#">Company</a></li>
-                            <li><a href="#">Careers</a></li>
-                            <li><a href="#">Contact Us</a></li>
-                            <li><a href="#">Sustainability</a></li>
-                            <li><a href="#">Media Center</a></li>
-                            <li><a href="#">Privacy &amp; Legal</a></li>
-                            <li><a href="#">Cookie Settings</a></li>
-                            <li><a href="#">Sitemap</a></li>
-                            <li><a href="#">Newsletter</a></li>
-                        </ul>
-                    </nav>
-                </div>
-            </div>
+            
         </div>
     </footer>
 </body>
