Completed Responsice Menu

--- a/index.html
+++ b/index.html
@@ -27,12 +27,14 @@
         </div>
     </header>
     <main style="height: 400px;">
-        <section>
-            <div class="container grid grid-col-2">
+        <div class="container">
+            <h1>Who am I?</h1>
+            <div class="grid grid-col-2 | grid-none-sm">
                 <div>content</div>
                 <div>content</div>
             </div>
-        </section>
+        </div>
+        
     </main>
     <footer class="bg-neutral-850 text-neutral-100">
         <div class="container">
