Finished home page, finished hobbies page. Added all pages.

--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dylan de Groot</title>
+    <title>Dylan de Groot | Contact</title>
 </head>
 <body>
     <header class="primary-header bg-neutral-850 sticky">
@@ -28,25 +28,13 @@
     </header>
     <main id="home">
         <div class="container">
-            <h1 class="text-center mt-1">About Me</h1>
-            <div class="grid grid-col-2 gap-small mt-2 | grid-col-1-sm">
-                <div>
-                    <h2>Intro</h2>
-                    <p>Hello! Welcome to my website about, well, me obviously. I have to create a website using pure HTML and CSS. I know what you're thinking, we all know websites with JavaScript are 100 times better. So many more possibilities.</p>
-                </div>
-                <div class="flex justify-content-center"><img class="resize-m" src="img/nerfbattle.jpg" alt="Nerfbattle"></div>
-                <div class="flex justify-content-center"><img class="resize-m" src="img/diploma_uitreiking.png" alt="Nerfbattle"></div>
-    
-                <div>
-                    <h2>Background</h2>
-                    <p>As of making this website I'm 18 years old. I live with my dad and dog in the Netherlands in a small town called Reuver. Last year I graduated Application / media development at a MBO school in Eindhoven. After graduating I decided to study further at Avans. </p>
-                </div>
-            </div>
+            <h1 class="text-center mt-1">Contact</h1>
+            
         </div>
     </main>
     <footer class="mt-2 bg-neutral-850 text-neutral-100 fs-300">
         <div class="container-s">
-            <div class="grid grid-col-3 justify-items-center padding-block-1 gap-small | grid-col-2-sm ">
+            <div class="grid grid-col-3 justify-items-center padding-block-1 | grid-col-2-sm ">
                 <div>I am active on the following places
                     <ul role="list" class="icon-list text-center fs-350">
                         <li><a href="https://www.instagram.com/dylaaan______/"><i class="fab fa-instagram"></i></a></li>
