--- a/hobbies.html
+++ b/hobbies.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dylan de Groot</title>
+    <title>Dylan de Groot | Hobbies</title>
 </head>
 <body>
     <header class="primary-header bg-neutral-850 sticky">
@@ -26,21 +26,26 @@
             </nav>
         </div>
     </header>
-    <main id="home">
+    <main id="hobbies">
         <div class="container">
-            <h1 class="text-center mt-1">About Me</h1>
-            <div class="grid grid-col-2 gap-small mt-2 | grid-col-1-sm">
-                <div>
-                    <h2>Intro</h2>
-                    <p>Hello! Welcome to my website about, well, me obviously. I have to create a website using pure HTML and CSS. I know what you're thinking, we all know websites with JavaScript are 100 times better. So many more possibilities.</p>
+            <h1 class="text-center mt-1">Hobbies</h1>
+            <div class="grid grid-col-3 gap-small | grid-col-1-sm">
+                <div class="card">
+                    <h2>Travelling</h2>
+                    <p>I enjoy travlling, since in the Netherland you get access to free public transport when you're a student I use trains and busses very often. In the last couple of years I have been to so many places in the Netherland by using this free transporting method. I like exploring new locations, especially with friends.</p>
+                    <div class="flex justify-content-center mt-1"><img src="img/timeline.jpg" alt="My Maps Timeline"></div>  
                 </div>
-                <div class="flex justify-content-center"><img class="resize-m" src="img/nerfbattle.jpg" alt="Nerfbattle"></div>
-                <div class="flex justify-content-center"><img class="resize-m" src="img/diploma_uitreiking.png" alt="Nerfbattle"></div>
-    
-                <div>
-                    <h2>Background</h2>
-                    <p>As of making this website I'm 18 years old. I live with my dad and dog in the Netherlands in a small town called Reuver. Last year I graduated Application / media development at a MBO school in Eindhoven. After graduating I decided to study further at Avans. </p>
+                <div class="card">
+                    <h2>Partying</h2>
+                    <p>Well, I am 18 and still in my good old years. I enjoy going out to party and go to festivals. I've been to a lot of festivals for free as well, because of the work I do via <a href="youngones.html">YoungOnes</a>, but more info on that later. The exiting part of going out is you never know what's going to happen in the end. You meet new people, new opportunities.</p>
+                    <div class="flex justify-content-center mt-1"><img src="img/timeline.jpg" alt="Festival"></div>  
+
                 </div>
+                <div class="card">
+                    <h2>Gaming</h2>
+                    <p>When I am not outside I usually play games. I've been playing games since I was a little kid. It started with Pokemon on the Nintendo DS back in 2010. When I got older I started playing a lot of shooter games like COD. At the moment I am only playing a game called Valorant, which is basically a tactical shooter game.</p>
+                    <div class="flex justify-content-center mt-1"><img src="img/timeline.jpg" alt="Valorant"></div>  
+                </div> 
             </div>
         </div>
     </main>
