Started on contact page

--- a/contact.html
+++ b/contact.html
@@ -29,12 +29,24 @@
     <main id="home">
         <div class="container">
             <h1 class="text-center mt-1">Contact</h1>
-            
+            <p class="text-center">Just fill in this form to contact me and I'll reply to you within 2 days!</p>
+            <div class="flex justify-content-center mt-1">
+                <form id="contact_form" style="width: 1200px" class=" bg-neutral-850 text-neutral-100">
+                    <div class="grid grid-col-2 gap-small">
+                        <input placeholder="First name..." type="text" name="name" id="name">
+                        <input placeholder="Last name..." type="text" name="name" id="name">
+                    </div>
+                    <label for="email">Email</label>
+                    <input type="email" name="email" id="email">
+                    <label for="message">Message</label>
+                    <textarea name="message" id="message"></textarea>
+                </form>
+            </div>
         </div>
     </main>
     <footer class="mt-2 bg-neutral-850 text-neutral-100 fs-300">
         <div class="container-s">
-            <div class="grid grid-col-3 justify-items-center padding-block-1 | grid-col-2-sm ">
+            <div class="grid grid-col-3 justify-items-center padding-block-1 gap-small | grid-col-2-sm ">
                 <div>I am active on the following places
                     <ul role="list" class="icon-list text-center fs-350">
                         <li><a href="https://www.instagram.com/dylaaan______/"><i class="fab fa-instagram"></i></a></li>
