--- a/experiences.html
+++ b/experiences.html
@@ -14,10 +14,10 @@
     <header class="primary-header bg-neutral-850 sticky">
         <input type="checkbox" class="d-none" id="checkbox_toggle">
         <label for="checkbox_toggle" class="hamburger absolute text-neutral-100">&#9776;</label>
-        <div class="container-s flex align-items-center | flex-col">
+        <div class="container-s flex align-items-center | flex-col-sm">
             <a href="index.html"><img src="/img/dyldekrokodil_logo.png" alt="Logo"></a>
             <nav class="primary-navigation text-neutral-100">
-                <ul role="list" class="nav-list flex gap-small uppercase | flex-col">
+                <ul role="list" class="nav-list flex gap-small uppercase | flex-col-sm">
                     <li><a href="hobbies.html">Hobbies</a></li>
                     <li><a href="experiences.html">Experiences</a></li>
                     <li><a href="youngones.html">YoungOnes</a></li>
