--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <header class="primary-header bg-neutral-850 sticky">
         <input type="checkbox" class="d-none" id="checkbox_toggle">
         <label for="checkbox_toggle" class="hamburger absolute text-neutral-100">&#9776;</label>
-        <div class="container-s flex align-items-center | flex-col">
+        <div class="container-s flex align-items-center | flex-col-sm">
             <a href="index.html"><img src="/img/dyldekrokodil_logo.png" alt="Logo"></a>
             <nav class="primary-navigation text-neutral-100">
-                <ul role="list" class="nav-list flex gap-small uppercase | flex-col">
+                <ul role="list" class="nav-list flex gap-small uppercase | flex-col-sm">
                     <li><a href="hobbies.html">Hobbies</a></li>
                     <li><a href="experiences.html">Experiences</a></li>
                     <li><a href="youngones.html">YoungOnes</a></li>
@@ -28,17 +28,17 @@
     </header>
     <main id="home">
         <div class="container">
-            <h1 class="text-center mt-1">About Me</h1>
+            <h1 class="text-center fw-bold mt-1">About Me</h1>
             <div class="grid grid-col-2 gap-small mt-2 | grid-col-1-sm">
                 <div>
-                    <h2>Intro</h2>
+                    <h2 class="fw-semi-bold">Intro</h2>
                     <p>Hello! Welcome to my website about, well, me obviously. I have to create a website using pure HTML and CSS. I know what you're thinking, we all know websites with JavaScript are 100 times better. So many more possibilities.</p>
                 </div>
-                <div class="flex justify-content-center"><img class="resize-m" src="img/nerfbattle.jpg" alt="Nerfbattle"></div>
-                <div class="flex justify-content-center"><img class="resize-m" src="img/diploma_uitreiking.png" alt="Nerfbattle"></div>
+                <div class="flex justify-content-end | justify-content-center-sm"><img class="resize-m" src="img/nerfbattle.jpg" alt="Nerfbattle"></div>
+                <div class="flex | justify-content-center-sm"><img class="resize-m" src="img/diploma_uitreiking.png" alt="Nerfbattle"></div>
     
                 <div>
-                    <h2>Background</h2>
+                    <h2 class="fw-semi-bold">Background</h2>
                     <p>As of making this website I'm 18 years old. I live with my dad and dog in the Netherlands in a small town called Reuver. Last year I graduated Application / media development at a MBO school in Eindhoven. After graduating I decided to study further at Avans. </p>
                 </div>
             </div>
