--- a/hobbies.html
+++ b/hobbies.html
@@ -14,10 +14,10 @@
     <header class="primary-header bg-neutral-850 sticky">
         <input type="checkbox" class="d-none" id="checkbox_toggle">
         <label for="checkbox_toggle" class="hamburger absolute text-neutral-100">&#9776;</label>
-        <div class="container-s flex align-items-center | flex-col">
+        <div class="container-s flex align-items-center | flex-col-sm">
             <a href="index.html"><img src="/img/dyldekrokodil_logo.png" alt="Logo"></a>
             <nav class="primary-navigation text-neutral-100">
-                <ul role="list" class="nav-list flex gap-small uppercase | flex-col">
+                <ul role="list" class="nav-list flex gap-small uppercase | flex-col-sm">
                     <li><a href="hobbies.html">Hobbies</a></li>
                     <li><a href="experiences.html">Experiences</a></li>
                     <li><a href="youngones.html">YoungOnes</a></li>
@@ -28,22 +28,22 @@
     </header>
     <main id="hobbies">
         <div class="container">
-            <h1 class="text-center mt-1">Hobbies</h1>
+            <h1 class="text-center fw-semi-bold mt-1">Hobbies</h1>
             <p class="text-center">On this page I will describe what I love to do in my free time</p>
             <div class="grid grid-col-3 gap-small | grid-col-1-sm mt-1">
-                <div class="card">
-                    <h2>Travelling</h2>
+                <div class="hobby">
+                    <h2 class="fw-semi-bold">Travelling</h2>
                     <p>I enjoy travlling, since in the Netherland you get access to free public transport when you're a student I use trains and busses very often. In the last couple of years I have been to so many places in the Netherland by using this free transporting method. I like exploring new locations, especially with friends.</p>
                     <div class="flex justify-content-center mt-1"><img src="img/timeline.jpg" alt="My maps timeline"></div>  
                 </div>
-                <div class="card">
-                    <h2>Partying</h2>
+                <div class="hobby">
+                    <h2 class="fw-semi-bold">Partying</h2>
                     <p>Well, I am 18 and still in my good old years. I enjoy going out to party and go to festivals. I've been to a lot of festivals for free as well, because of the work I do via <a href="youngones.html">YoungOnes</a>, but more info on that later. The exiting part of going out is you never know what's going to happen in the end. You meet new people, new opportunities.</p>
                     <div class="flex justify-content-center mt-1"><img src="img/sleeping_bathroom.jpg" alt="Drunk in bathroom"></div>  
 
                 </div>
-                <div class="card">
-                    <h2>Gaming</h2>
+                <div class="hobby">
+                    <h2 class="fw-semi-bold">Gaming</h2>
                     <p>When I am not outside I usually play games. I've been playing games since I was a little kid. It started with Pokemon on the Nintendo DS back in 2010. When I got older I started playing a lot of shooter games like COD. At the moment I am only playing a game called Valorant, which is basically a tactical shooter game.</p>
                     <div class="flex justify-content-center mt-1"><img src="img/valorant_startmenu.jpg" alt="Valorant startmenu"></div>  
                 </div> 
