--- a/experiences.html
+++ b/experiences.html
@@ -28,8 +28,8 @@
     </header>
     <main id="home">
         <div class="container">
-            <h1 class="text-center mt-1">Experiences</h1>
-
+            <h1 class="text-center fw-bold mt-1">Experiences</h1>
+            <p class="text-center">I don't have a lot of experiences, but something is better than nothing.</p>
         </div>
     </main>
     <footer class="mt-2 bg-neutral-850 text-neutral-100 fs-300">
