--- a/youngones.html
+++ b/youngones.html
@@ -118,6 +118,48 @@
                         <h4 class="fs-350 fw-semi-bold">What I did</h4>
                         <p class="fs-300">Help making bread and sandwiches.</p>
                     </div>
+
+                    <div class="card padding-05 bg-neutral-700">
+                        <div class="wage-icon fs-300">&euro; 18,50</div>
+                        <h3 class="fs-350 fw-semi-bold">Cleaner groundfloors and tables KW1C</h3>
+                        <div class="grid grid-col-2 fs-250">
+                            <div class="flex flex-col">
+                                <span>Mon 19 sep.</span>
+                                <span>12:00 - 17:00</span>
+                            </div>
+                            <span>'s-Hertogenbosch</span>
+                        </div>
+                        <h4 class="fs-350 fw-semi-bold">What I did</h4>
+                        <p class="fs-300">Cleaning tables in a public school and at last cleaning the floors</p>
+                    </div>
+
+                    <div class="card padding-05 bg-neutral-700">
+                        <div class="wage-icon fs-300">&euro; 20,00</div>
+                        <h3 class="fs-350 fw-semi-bold">Event Organizer The Streamers Festival!</h3>
+                        <div class="grid grid-col-2 fs-250">
+                            <div class="flex flex-col">
+                                <span>Sat 17 sep.</span>
+                                <span>13:00 - 20:00</span>
+                            </div>
+                            <span>Amsterdam</span>
+                        </div>
+                        <h4 class="fs-350 fw-semi-bold">What I did</h4>
+                        <p class="fs-300">Controlling event traffic.</p>
+                    </div>
+
+                    <div class="card padding-05 bg-neutral-700">
+                        <div class="wage-icon fs-300">&euro; 16,00</div>
+                        <h3 class="fs-350 fw-semi-bold">Cashier wanted in Heerlen</h3>
+                        <div class="grid grid-col-2 fs-250">
+                            <div class="flex flex-col">
+                                <span>Fri 26 aug.</span>
+                                <span>09:30 - 18:00</span>
+                            </div>
+                            <span>Heerlen</span>
+                        </div>
+                        <h4 class="fs-350 fw-semi-bold">What I did</h4>
+                        <p class="fs-300">Cashier stuff.</p>
+                    </div>
                 </div>
             </div>
         </div>
