--- a/memes.html
+++ b/memes.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dylan de Groot | Experiences</title>
+    <title>Dylan de Groot | Memes</title>
 </head>
 <body>
     <header class="primary-header bg-neutral-850 sticky">
@@ -19,17 +19,53 @@
             <nav class="primary-navigation text-neutral-100">
                 <ul role="list" class="nav-list flex gap-small uppercase | flex-col-sm">
                     <li><a href="hobbies.html">Hobbies</a></li>
-                    <li><a href="experiences.html">Experiences</a></li>
+                    <li><a href="memes.html">Memes</a></li>
                     <li><a href="youngones.html">YoungOnes</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
         </div>
     </header>
-    <main id="home">
+    <main id="memes">
         <div class="container">
-            <h1 class="text-center fw-bold mt-1">Experiences</h1>
-            <p class="text-center">I don't have a lot of experiences, but something is better than nothing.</p>
+            <h1 class="text-center fw-bold mt-1">Memes</h1>
+            <p class="text-center">Just an overview of some memes I found.</p>
+            <div class="mt-1 grid grid-col-4 | grid-col-1-sm">
+                <div class="breathing">
+                    <video loop autoplay>
+                        <source src="img/meme_hulk.mp4">
+                        Your browser doees not support HTML video
+                    </video>
+                </div>
+                <div class="breathing">
+                    <img src="img/meme_guy.jpg" alt="Just a meme">
+                </div>
+                <div class="breathing">
+                    <img src="img/meme_latin.jpg" alt="Just a latin meme">
+                </div>
+                <div class="breathing">
+                    <video class="resize-m" loop autoplay>
+                        <source src="img/meme_octo.mp4">
+                        Your browser doees not support HTML video
+                    </video>
+                </div>
+            </div>
+
+            <div class="mt-1 bg-neutral-850 text-neutral-100 padding-1 full-width">
+                <p class="text-center">You want more of my fantastic memes, contact me on my <a href="contact.html">contact page</a> for more amazing memes!</p>
+            </div>
+
+            <div class="mt-1 grid grid-col-3 | grid-col-1-sm">
+                <div class="breathing">
+                    <img src="img/meme_schwarze.png" alt="Just another meme">
+                </div>
+                <div class="breathing">
+                    <img src="img/meme_eat.jpg" alt="Just a funny meme">
+                </div>
+                <div class="breathing">
+                    <img src="img/meme_mario.jpg" alt="Just a silly meme">
+                </div>  
+            </div>
         </div>
     </main>
     <footer class="mt-2 bg-neutral-850 text-neutral-100 fs-300">
@@ -48,7 +84,7 @@
                     <nav class="secundairy-navigation text-neutral-100">
                         <ul role="list" class="">
                             <li><a href="hobbies.html">Hobbies</a></li>
-                            <li><a href="experiences.html">Experiences</a></li>
+                            <li><a href="memes.html">Memes</a></li>
                             <li><a href="youngones.html">YoungOnes</a></li>
                             <li><a href="contact.html">Contact</a></li>
                         </ul>
