--- a/hobbies.html
+++ b/hobbies.html
@@ -19,7 +19,7 @@
             <nav class="primary-navigation text-neutral-100">
                 <ul role="list" class="nav-list flex gap-small uppercase | flex-col-sm">
                     <li><a href="hobbies.html">Hobbies</a></li>
-                    <li><a href="experiences.html">Experiences</a></li>
+                    <li><a href="memes.html">Memes</a></li>
                     <li><a href="youngones.html">YoungOnes</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
@@ -66,7 +66,7 @@
                     <nav class="secundairy-navigation text-neutral-100">
                         <ul role="list" class="">
                             <li><a href="hobbies.html">Hobbies</a></li>
-                            <li><a href="experiences.html">Experiences</a></li>
+                            <li><a href="memes.html">Memes</a></li>
                             <li><a href="youngones.html">YoungOnes</a></li>
                             <li><a href="contact.html">Contact</a></li>
                         </ul>
