Really finished now

--- a/memes.html
+++ b/memes.html
@@ -32,16 +32,16 @@
             <p class="text-center">Just an overview of some memes I found.</p>
             <div class="mt-1 grid grid-col-4 | grid-col-1-sm">
                 <div class="breathing">
-                    <video loop autoplay>
+                    <video class="resize-m" loop autoplay>
                         <source src="img/meme_hulk.mp4">
                         Your browser doees not support HTML video
                     </video>
                 </div>
                 <div class="breathing">
-                    <img src="img/meme_guy.jpg" alt="Just a meme">
+                    <img class="resize-m" src="img/meme_guy.jpg" alt="Just a meme">
                 </div>
                 <div class="breathing">
-                    <img src="img/meme_latin.jpg" alt="Just a latin meme">
+                    <img class="resize-m" src="img/meme_latin.jpg" alt="Just a latin meme">
                 </div>
                 <div class="breathing">
                     <video class="resize-m" loop autoplay>
