--- a/contact.html
+++ b/contact.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -17,7 +18,7 @@
         <div class="container-s flex align-items-center | flex-col-sm">
             <a href="index.html"><img src="/img/dyldekrokodil_logo.png" alt="Logo"></a>
             <nav class="primary-navigation text-neutral-100">
-                <ul role="list" class="nav-list flex gap-small uppercase | flex-col-sm">
+                <ul class="nav-list flex gap-small uppercase | flex-col-sm">
                     <li><a href="hobbies.html">Hobbies</a></li>
                     <li><a href="memes.html">Memes</a></li>
                     <li><a href="youngones.html">YoungOnes</a></li>
@@ -62,7 +63,7 @@
         <div class="container-s">
             <div class="grid grid-col-3 justify-items-center padding-block-1 gap-small | grid-col-2-sm ">
                 <div>I am active on the following places
-                    <ul role="list" class="icon-list text-center fs-350">
+                    <ul class="icon-list text-center fs-350">
                         <li><a href="https://www.instagram.com/dylaaan______/"><i class="fab fa-instagram"></i></a></li>
                         <li><a href="https://www.facebook.com/dylan.degroot.967"><i class="fab fa-facebook"></i></a></li>
                         <li><a href="https://www.linkedin.com/in/dylan-de-groot/"><i class="fab fa-linkedin"></i></a></li>
@@ -72,7 +73,7 @@
                 <div>
                     <div class="fs-350">Navigation</div>
                     <nav class="secundairy-navigation text-neutral-100">
-                        <ul role="list" class="">
+                        <ul>
                             <li><a href="hobbies.html">Hobbies</a></li>
                             <li><a href="memes.html">Memes</a></li>
                             <li><a href="youngones.html">YoungOnes</a></li>
@@ -82,8 +83,8 @@
                 </div>
                 <div>
                     You can contact me by email or phone
-                    <ul role="list" class="text-center">
-                        <li><a href="tel:+31 (6) 82987401">+31 (6) 82987401</a></li>
+                    <ul class="text-center">
+                        <li><a href="tel:+31(6)82987401">+31 (6) 82987401</a></li>
                         <li><a href="mailto:dylandegroot2003@gmail.com">dylandegroot2003@gmail.com</a></li>
                     </ul>
                 </div>
