--- a/hobbies.html
+++ b/hobbies.html
@@ -54,7 +54,8 @@
     <footer class="mt-2 bg-neutral-850 text-neutral-100 fs-300">
         <div class="container-s">
             <div class="grid grid-col-3 justify-items-center padding-block-1 gap-small | grid-col-2-sm ">
-                <div>I am active on the following places
+                <div>
+                    <p>I am active on the following places</p>
                     <ul class="icon-list text-center fs-350">
                         <li><a href="https://www.instagram.com/dylaaan______/"><i class="fab fa-instagram"></i></a></li>
                         <li><a href="https://www.facebook.com/dylan.degroot.967"><i class="fab fa-facebook"></i></a></li>
@@ -74,7 +75,7 @@
                     </nav>
                 </div>
                 <div>
-                    You can contact me by email or phone
+                    <p>You can contact me by email or phone</p>
                     <ul class="text-center">
                         <li><a href="tel:+31(6)82987401">+31 (6) 82987401</a></li>
                         <li><a href="mailto:dylandegroot2003@gmail.com">dylandegroot2003@gmail.com</a></li>
