--- a/memes.html
+++ b/memes.html
@@ -52,7 +52,7 @@
                 </div>
             </div>
 
-            <div class="mt-1 bg-neutral-850 text-neutral-100 padding-1 full-width">
+            <div class="mt-1 bg-neutral-850 text-neutral-100 padding-1">
                 <p class="text-center">You want more of my fantastic memes, contact me on my <a href="contact.html">contact page</a> for more amazing memes!</p>
             </div>
 
