--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/img/dyldekrokodil_logo.png">
+    <link rel="icon" href="./img/dyldekrokodil_logo.png">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
@@ -16,7 +16,7 @@
         <input type="checkbox" class="d-none" id="checkbox_toggle">
         <label for="checkbox_toggle" class="hamburger absolute text-neutral-100">&#9776;</label>
         <div class="container-s flex align-items-center | flex-col-sm">
-            <a href="index.html"><img src="/img/dyldekrokodil_logo.png" alt="Logo"></a>
+            <a href="index.html"><img src="./img/dyldekrokodil_logo.png" alt="Logo"></a>
             <nav class="primary-navigation text-neutral-100">
                 <ul class="nav-list flex gap-small uppercase | flex-col-sm">
                     <li><a href="hobbies.html">Hobbies</a></li>
